<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="15dp"
    android:id="@+id/add_card_view">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/teal_700">

        <TextView
            android:id="@+id/label_kode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:background="@drawable/shape_layout_corners_with_color"
            android:padding="4dp"
            android:text="@string/kode"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/tv_list_add_nama_desa"
            app:layout_constraintEnd_toStartOf="@+id/tv_label_periode_minggu"
            app:layout_constraintTop_toTopOf="@+id/tv_list_add_nama_desa" />

        <TextView
            android:id="@+id/tv_label_periode_minggu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/shape_layout_corners_with_color"
            android:padding="3dp"
            android:text="@string/periode_minggu"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/label_kode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_list_add_nama_desa" />

        <TextView
            android:id="@+id/tv_kode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_200"
            android:textStyle="bold"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/label_kode"
            app:layout_constraintStart_toStartOf="@+id/label_kode"
            app:layout_constraintTop_toBottomOf="@+id/label_kode"
            tools:text="A" />

        <TextView
            android:id="@+id/tv_periode_minggu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1"
            android:textStyle="bold"
            android:textColor="@color/purple_200"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_label_periode_minggu"
            app:layout_constraintStart_toStartOf="@+id/tv_label_periode_minggu"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_periode_minggu" />

        <TextView
            android:id="@+id/tv_list_add_nama_desa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="NATAR" />


        <TextView
            android:id="@+id/tv_add_nama_penyakit"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:maxLines="4"
            android:layout_marginTop="8dp"
            android:text="@string/malaria_mix"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_list_add_nama_desa"
            app:layout_constraintTop_toBottomOf="@+id/tv_list_add_nama_desa" />

        <TextView
            android:id="@+id/tv_jumlah_penderita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/tools_jumlah"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_add_nama_penyakit"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_nama_penyakit" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>