<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add.AddDataActivity">

    <TextView
        android:id="@+id/label_minggu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/data_minggu_ke"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sp_minggu"
        android:layout_width="100dp"
        android:layout_marginStart="8dp"
        android:layout_height="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/label_minggu"
        app:layout_constraintTop_toTopOf="@+id/label_minggu" />

    <TextView
        android:id="@+id/label_sp_desa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_desa"
        app:layout_constraintStart_toStartOf="@+id/label_minggu"
        app:layout_constraintTop_toTopOf="@+id/sp_desa" />

    <Spinner
        android:id="@+id/sp_desa"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/sp_minggu"
        app:layout_constraintTop_toBottomOf="@+id/sp_minggu" />

    <TextView
        android:id="@+id/label_sp_penyakit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_penyakit"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/label_sp_desa"
        app:layout_constraintTop_toBottomOf="@+id/label_sp_desa" />

    <TextView
        android:id="@+id/tv_kode_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/sp_minggu"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toEndOf="@+id/sp_minggu"
        app:layout_constraintTop_toTopOf="@+id/sp_minggu"
        app:layout_constraintVertical_bias="0.0"
        tools:text="A" />

    <Spinner
        android:id="@+id/sp_penyakit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/label_sp_penyakit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/sp_desa"
        app:layout_constraintTop_toTopOf="@+id/label_sp_penyakit" />

    <TextView
        android:id="@+id/label_sp_jumlah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jumlah_penderita"
        app:layout_constraintBottom_toBottomOf="@+id/edt_jumlah_pasien"
        app:layout_constraintStart_toStartOf="@+id/label_sp_penyakit"
        app:layout_constraintTop_toTopOf="@+id/edt_jumlah_pasien" />

    <EditText
        android:id="@+id/edt_jumlah_pasien"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/masukan_jumlah_penderita"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/sp_penyakit"
        app:layout_constraintTop_toBottomOf="@+id/sp_penyakit" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simpan"
        android:backgroundTint="@color/old_green"
        app:layout_constraintBottom_toBottomOf="@+id/edt_jumlah_pasien"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edt_jumlah_pasien"
        app:layout_constraintTop_toTopOf="@+id/edt_jumlah_pasien" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_jumlah_pasien"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/grey"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/data_terbaru"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tambah_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            tools:listitem="@layout/list_item_tambah_data" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_delete_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/red"
        android:src="@drawable/ic_baseline_delete_forever_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>